src/styles/style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family:DejaVu Sans Mono, monospace;
}
:root {
  --compass-color: #e0c281;
  --compass-accent: #475651;
  --compass-red: #600c12;
}
body {
  background-size: cover;
  background-repeat: no-repeat;
  height: 100vh;
  color: white;
}
header {
  /* padding-top: 50px; */
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin-bottom: 5px;
  padding-top: 5px;
}
.button-metric {
  background-color: lightgrey;
  display: flex;
  justify-content: space-between;
  width: 100px;
  padding: 7px 10px;
  border-radius: 60px;
}
.button-metric button {
  width: 40px;
  height: 40px;
  border-radius: 60px;
  font-size: 1em;
}
.active,
.button-metric button:active {
  background-color: white;
  border: none;
}

.not-active {
  background-color: lightgray;
  border: none;

}
.city {
  display: flex;
  align-items: center;
  font-size: 1.3em;
}
.city img {
  margin-right: 10px;
}
.search {
  display: flex;
  align-items: center;
}
input {
  width: 600px;
  height: 45px;
  border-radius: 50px;
  padding: 20px;
  font-size: 1.1em;
  margin-right: -60px;
  border: none;
  opacity: 70%;

}
.submit {
  background-image: url(../assets/icons/search.svg);
  background-position: center;
  background-repeat: no-repeat;
  background-color:  transparent;
  /* opacity: 30%; */
  background-size: 25px;
  width: 60px;
  height: 50px;
  border-top-right-radius: 30px;
  border-bottom-right-radius: 30px;
  border: none;
  /* border: 1px solid; */
}
main {
  display: flex;
  justify-content: center;
}
.weather {
  font-size: 1.5em;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 95vw;
  height: 90vh;
  border-radius: 20px;
  /* border: 1px solid; */
  padding-left: 20px;
  background: rgba(255, 255, 255, 0.25);

}
.today {
  /* background-color: var(--compass-color); */
  display: flex;
  justify-content: space-between;
  align-items: end;
}
.day-info,
.info-left {
  display: flex;
  width: 500px;
}
.info-left {
  width: 50vw;
}
.info-bottom {
  display: grid;
  grid-template-columns: repeat(3, 150px);
  gap: 20px;
}
.info-bottom div {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background: rgba(255, 255, 255, 0.2);
  height: 100px;
  border-radius: 10px;
  font-size: 0.8=9em;
}

span {
  font-size: 3em;
}
sup {
  display: inline-block;
  vertical-align: baseline;
  transform: translateY(-40px);
  line-height: 1;
  font-size: 0.95em;
}
.info-right {
  width: 50vw;
  display: flex;
  flex-direction: column;
}
.info-left img,
.card img,
.wind-desc img {
  width: 50px;
  height: 50px;
}
.info-left img{
  height: 100px
}
.wind-desc {
  display: flex;
}
.illustration {
  height: 350px;
}
.illustration img {
  height: 350px;
  width: 350px;
}
.day {
  display: flex;
  flex-direction: column;
}
.date-switch {
  display: flex;
  justify-content: center;
  margin-top: 10px;
  margin-bottom: 10px;
  color: #6d7a76;

}
.switch {
  text-align: center;
  width: 20vh;
  padding: 10px;
  background: rgba(255, 255, 255, 0.35);
  border-radius: 3vh;
  margin: 15px;
}
.current {
  background: rgba(255, 255, 255, 1);
}
.forecast {
  display: grid;
  grid-template-columns: repeat(24, 230px);
  column-gap: 20px;
  justify-content: space-between;  
  margin-right: 20px;
  overflow-x: scroll;
}
.card {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  text-align: center;
  border-radius: 3vh;
  background: rgba(255, 255, 255, 0.75);
  color: #6d7a76;
  font-size: 1em;
  height: 26vh;
}

